# ai-mcp

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
1.pythonbasics/: test.ipynb
2.build mcp server/demo-service/: clientfastmcp.py  clinet.py  server.py
