[project]
name = "python-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Your Name",email = "you@example.com"},
    {name = "", email = ""},
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.14.1",
    "mcp>=1.25.0",
    "numpy>=2.4.0,<3.0.0",
]
license = {text = "MIT"}



[tool.pdm]
distribution = false
